--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Unknown Caller Lookup</string>
     <string name="menu_settings">Settings</string>
     <string name="information">When an unknown number is ringing, Google search results for this number will open in a web browser automatically.</string>
     <string name="optional_settings">Optional settings</string>
-    <string name="search_string_suffix">Search string suffix</string>
-
+    <string name="search_string_suffix">Additional search keywords</string>
 </resources>
