--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -6,4 +6,5 @@
     <string name="optional_settings">Voliteľné nastavenia</string>
     <string name="search_string_suffix">Ďalšie kľúčové slová</string>
     <string name="url_prefix">URL prefix</string>
+    <string name="url_prefix_must_be_url">URL prefix musí začínať s http:// nebo https://</string>
 </resources>
