--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -5,6 +5,12 @@
     <string name="information">Keď začne zvoniť neznáme číslo, aplikácia automaticky otvorí prehliadač s Google výsledkami pre toto číslo.</string>
     <string name="optional_settings">Voliteľné nastavenia</string>
     <string name="search_string_suffix">Ďalšie kľúčové slová</string>
-    <string name="url_prefix">URL prefix</string>
-    <string name="url_prefix_must_be_url">URL prefix musí začínať s http:// nebo https://</string>
+    <string name="url_prefix">Vyhľadávač</string>
+    <string name="url_prefix_must_be_url">Vyhľadávač musí začínať s http:// alebo https://</string>
+    <string name="number_format">Formát čísiel bez medzinárodnej predvoľby</string>
+    <string-array name="number_format_choices" xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
+        <item>0123456789</item>
+        <item>012-345-6789</item>
+        <item>012-345678</item>
+    </string-array>
 </resources>
