--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Vyhladávání Neznámých Čísel</string>
+    <string name="app_name">Vyhledávání Neznámých Čísel</string>
     <string name="menu_settings">Nastavení</string>
     <string name="information">Když začne zvonit neznámý číslo, aplikace automaticky otevří prohlížeč s Google výsledkami pro toto číslo.</string>
     <string name="optional_settings">Volitelná nastavení</string>
     <string name="search_string_suffix">Další klíčová slova</string>
-    <string name="url_prefix">URL prefix</string>
-    <string name="url_prefix_must_be_url">URL prefix musí začínat s http:// nebo https://</string>
+    <string name="url_prefix">Vyhledávač</string>
+    <string name="url_prefix_must_be_url">Vyhledávač musí začínat s http:// nebo https://</string>
+    <string name="number_format">Formát čísel bez medzinárodní předvolby</string>
+    <string-array name="number_format_choices" xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
+        <item>0123456789</item>
+        <item>012-345-6789</item>
+        <item>012-345678</item>
+    </string-array>
 </resources>
