--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources >
     <string name="app_name">Unknown Caller Lookup</string>
     <string name="menu_settings">Settings</string>
     <string name="information">When an unknown number is ringing, Google search results for this number will open in a web browser automatically.</string>
+    <string name="url_prefix">Search engine</string>
+    <string name="url_prefix_must_be_url">Search engine must start with http:// or https://</string>
     <string name="optional_settings">Optional settings</string>
     <string name="search_string_suffix">Additional search keywords</string>
-    <string name="url_prefix">URL prefix</string>
-    <string name="url_prefix_must_be_url">The URL prefix must start with http:// or https://</string>
+    <string name="number_format">Format of numbers without country code</string>
+    <string-array name="number_format_choices" xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
+        <item>0123456789</item>
+        <item>012-345-6789</item>
+        <item>012-345678</item>
+    </string-array>
 </resources>
