--- a/unknowncallerlookup/src/main/res/values-cs/strings.xml
+++ b/unknowncallerlookup/src/main/res/values-cs/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Vyhledávání Neznámých Čísel</string>
     <string name="menu_settings">Nastavení</string>
@@ -8,7 +7,7 @@
     <string name="url_prefix">Vyhledávač</string>
     <string name="url_prefix_must_be_url">Vyhledávač musí začínat s http:// nebo https://</string>
     <string name="number_format">Formát čísel bez medzinárodní předvolby</string>
-    <string-array name="number_format_choices" xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
+    <string-array name="number_format_choices">
         <item>0123456789</item>
         <item>012-345-6789</item>
         <item>012-345678</item>
